20220613: add deployment get, list and update method, modify delete method is requested as delete
