# router/deployment_router.go
@@ -12,10 +12,9 @@ func (deploy *DeploymentRouter) InitDeploymentRouter(Router *gin.RouterGroup) {
 	deploymentGroup := Router.Group("deployment")
 	deploymentApi := v1.ApiGroupEnter.DeploymentApi
 	{
-		// deploymentGroup.GET("getDeployment/:namespace", deploymentApi.GetDeployment) // 获取 deployment 信息
-		// deploymentGroup.GET("listDeployment", deploymentApi.GetAllDeployment)        // 获取所有 deployment 信息
-		// deploymentGroup.POST("getDeployment", deploymentApi.GetDeployment)           // 获取单个 deployment 信息
-		// deploymentGroup.POST("createDeployment", deploymentApi.CreateDeployment)     // 创建 deployment
-		deploymentGroup.POST("deleteDeployment", deploymentApi.DeleteDeployment) // 删除 deployment
+		deploymentGroup.GET("getDeployment/:namespace", deploymentApi.GetDeployment) // 获取 deployment 信息
+		deploymentGroup.GET("listDeployment", deploymentApi.ListDeployment)          // 获取命名空间下的所有 deployment 信息
+		deploymentGroup.POST("createDeployment", deploymentApi.CreateDeployment)     // 创建 deployment
+		deploymentGroup.DELETE("deleteDeployment", deploymentApi.DeleteDeployment)   // 删除 deployment
 	}
 }
